--- a/ConsoleApp2/Ressource.resx
+++ b/ConsoleApp2/Ressource.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Files" xml:space="preserve">
-    <value>@"sokoban-maps-master\maps\sokoban-maps-60-plain.txt"</value>
+    <value>sokoban-maps-60-plain.txt</value>
   </data>
   <data name="z" xml:space="preserve">
     <value />
