--- a/Utilitaires/Ressource.resx
+++ b/Utilitaires/Ressource.resx
@@ -118,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Files" xml:space="preserve">
-    <value>@"C:\Users\Utilisateur\Desktop\sokoban-maps-master\maps\sokoban-maps-60-plain.txt"</value>
+    <value>sokoban-maps-60-plain.txt</value>
   </data>
 </root>
